<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.leaguekit.oauth</groupId>
  <artifactId>oauth-parent</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <modules>
    <module>war</module>
  </modules>
  <packaging>pom</packaging>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <jaxrs.lib.version>1.0.0-SNAPSHOT</jaxrs.lib.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <!-- jaxrs library -->
      <dependency>
        <groupId>com.leaguekit</groupId>
        <artifactId>jaxrs-lib</artifactId>
        <version>${jaxrs.lib.version}</version>
      </dependency>

      <!-- mysql connector -->
      <dependency>
        <groupId>mysql</groupId>
        <artifactId>mysql-connector-java</artifactId>
        <version>5.1.35</version>
      </dependency>

      <!-- facebook api-->
      <dependency>
        <groupId>com.restfb</groupId>
        <artifactId>restfb</artifactId>
        <version>1.9.0</version>
      </dependency>

      <!-- password hashing -->
      <dependency>
        <groupId>org.mindrot</groupId>
        <artifactId>jbcrypt</artifactId>
        <version>0.3m</version>
      </dependency>

      <!-- TESTING DEPENDENCIES -->
      <dependency>
        <groupId>com.leaguekit</groupId>
        <artifactId>jaxrs-lib-test</artifactId>
        <version>${jaxrs.lib.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.3</version>
        <configuration>
          <source>1.8</source>
          <target>1.8</target>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.eclipse.jetty</groupId>
        <artifactId>jetty-maven-plugin</artifactId>
        <version>9.3.0.M2</version>
      </plugin>
    </plugins>
  </build>

</project>